Word wrapping fixes

--- a/widget/assets/style.css
+++ b/widget/assets/style.css
@@ -12,6 +12,9 @@
 			opacity: 1;
 	}
 }
+.word-break{
+	word-break: break-word;
+}
 .btn-text{
 	background-color: transparent;
 	border: 1px solid transparent;
